0025077: [OOP] Explicit initialization of copy constructor

Explicit calls of copy constructor of base class added where compiler warnings are reported

Minor correction